# cloudability-skills

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  setup.sh
.bob/rules/: cloudability.md
.bob/skills/ai-model-intelligence-report/: SKILL.md
.bob/skills/cldy-checkin/: SKILL.md
.bob/skills/cldy-containers/: SKILL.md
.bob/skills/cldy-executive/: SKILL.md
.bob/skills/cldy-multicloud/: SKILL.md
.bob/skills/cldyroi/: SKILL.md
.bob/skills/discovery/: SKILL.md
.github/: copilot-instructions.md
cldy/: ARCHITECTURE.md
dashboards/: .env.example  .gitignore  README.md  pyproject.toml
dashboards/src/cloudability_dashboards/: __init__.py  cli.py  client.py
dashboards/src/cloudability_dashboards/generators/: __init__.py  checkin.py  containers.py  executive.py  multicloud.py
dashboards/src/cloudability_dashboards/templates/: base.html.j2  containers.html.j2  executive.html.j2  multicloud.html.j2
execdash/: SKILL.md
finops-agent/: ARCHITECTURE.md  PLAN.md  README.md  WORKFLOWS.md
mcp/: README.md  codex.toml  kiro.json
sc-skills/: README.md
sc-skills/CSA_Generator/: README.md  generate_csa_deck.py
sc-skills/discovery/: SKILL.md
skills/ai-model-intelligence-report/: COMMITMENT-ENHANCEMENT.md  INSIGHTS-ENGINE.md  SKILL.md
skills/archdash/: SKILL.md
skills/cldy/: AGENTIC-FINOPS-PLAN.md  SKILL.md
skills/cldyroi/: SKILL.md
skills/containersdash/: SKILL.md
skills/dailycheckin/: SKILL.md
skills/discovery/: SKILL.md
