[project]
name = "cloudability-dashboards"
version = "1.0.0"
description = "Unified Cloudability dashboard generators - executive, multi-cloud, containers, daily check-in"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[project.scripts]
cldy-dash = "cloudability_dashboards.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudability_dashboards"]
